--- a/module-07/css/style.css
+++ b/module-07/css/style.css
@@ -64,11 +64,6 @@ img {
     /* Modern Browsers */
 }
 
-* {
-    outline: 1px solid red;
-}
-
-
 /* header */
 
 .main-header {
@@ -85,8 +80,6 @@ img {
     align-items: flex-end;
     margin: 36px 0px 118px;
 }
-
-.site-logo {}
 
 .navigation-items {
     display: flex;
@@ -145,9 +138,6 @@ img {
 
 .main-content-wrapper {
     width: 100%;
-}
-
-.main-section {
 }
 
 .main-section-wrapper {
@@ -218,7 +208,6 @@ img {
     line-height: 1.2;
     text-align: center;
     margin: 0px 0px 12px 0px;
-
 }
 
 .description {
@@ -237,29 +226,19 @@ img {
     display: flex;
     background-image: url(../img/background-map.png);
     background-repeat: no-repeat;
-    /* background-size: cover; */
-    /* background-size: 100%; */
+    background-size: cover;
     background-position: center;
-    background-size: contain;
 }
 
-.main-footer-wrapper{
+.main-footer-wrapper {
     width: 100%;
 }
 
-.profile-form {
-    /* display: flex; */
-    /* flex-direction: column; */
-    /* align-items: center; */
-    /* margin-bottom: 114px; */
-}
-
-.profile-form-wrapper{
+.profile-form-wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-bottom: 114px;
-    
 }
 
 .footer-title {
@@ -295,13 +274,12 @@ img {
     flex-direction: column;
     justify-content: space-between;
     list-style: none;
-    width: 458px;
     margin: 0px;
     padding: 0px;
 }
 
 .input-field {
-    width: 100%;
+    min-width: 458px;
     border: 1px solid rgb(204, 204, 204);
     border-radius: 2px;
     background-color: rgb(255, 255, 255);
@@ -315,7 +293,7 @@ img {
 }
 
 .input-area {
-    width: 458px;
+    min-width: 458px;
     min-height: 214px;
     border: 1px solid rgb(204, 204, 204);
     border-radius: 5px;
@@ -325,7 +303,7 @@ img {
     font-weight: 700;
     line-height: 1.2;
     text-align: left;
-    padding: 20px 5px 0px 20px;
+    padding: 20px 5px 5px 20px;
     resize: none;
 }
 
@@ -349,7 +327,6 @@ textarea::-webkit-input-placeholder {
     line-height: 1.2;
     text-align: center;
     padding: 24px 46px;
-    /* margin-bottom: 114px; */
 }
 
 .profile-form input[name='name']:valid,
