--- a/module-08/css/style.css
+++ b/module-08/css/style.css
@@ -33,283 +33,217 @@ img {
     outline: 1px solid red;
 }
 
-.Rectangle_2 {
-    border-style: solid;
-    border-width: 2px;
-    border-color: rgb(255, 255, 255);
-    background-color: rgba(26, 25, 21, 0);
-    position: absolute;
-    left: 141px;
-    top: 16px;
-    width: 94px;
-    height: 40px;
-    z-index: 13;
-  }
-  
-
 /* header */
 
-.main-header{
+.main-header {
+    display: flex;
     background-image: url(../img/mobile-img.png);
     background-repeat: no-repeat;
-    background-position: cover;
-    background-position: center;
+    background-size: cover;
 }
 
-/* .main-header-wrapper {
+.main-header-wrapper {}
+
+.site-logo {
     display: flex;
+    justify-content: center;
+    margin: 30px;
 }
 
 .main-navigation {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    align-items: flex-end;
-    width: 100%;
-    margin: 36px 0px 118px;
-}
-
-.logo-text-wrapper {
-    display: block;
-    font-size: 26px;
-    font-family: 'Wisdom Script';
-    color: rgb(254, 209, 54);
-    line-height: 1.1;
-    margin: 0px;
-    padding: 0px 0px 0px 5px;
 }
 
 .navigation-items {
     display: flex;
-    justify-content: flex-start;
     flex-wrap: wrap;
-    max-width: 480px;
-    margin: 0px;
-    padding: 0px;
+    order: -1;
     list-style: none;
-    text-transform: uppercase;
+    margin: 20px 0px 118px;
+    padding: 0px 0px 0px 66px;
 }
 
-.navigation-item:not(:nth-of-type(5n)) {
-    margin-right: 39px;
+.navigation-item {
+    cursor: pointer;
 }
 
-.nav-link {
+.item-link {
     display: block;
-    font-size: 14px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-    color: rgb(34, 34, 34);
-    text-transform: uppercase;
     text-decoration: none;
+    font-size: 14px;
+    font-family: "Montserrat", sans-serif;
+    color: rgb(255, 255, 255);
+    font-weight: 700;
     line-height: 1.2;
+    border: 2px solid rgba(255, 255, 255, 0);
+    border-radius: 20px;
+    padding: 8px 16px;
 }
 
-.nav-link:hover::after,
-.nav-link:focus::after {
-    width: 100%;
-    left: 0;
+.item-link:hover,
+.item-link:focus {
+    border-color: rgba(255, 255, 255, 1);
     transition: all 0.2s linear;
 }
 
-.nav-link:hover,
-.nav-link:focus {
-    color: rgb(254, 209, 54);
-    transition: all 0.2s linear;
+.main-header-content {
+    margin: 0px 0px 138px;
+    padding: 0px;
 }
 
-.site-logo:hover {
-    background-color: rgba(254, 209, 54, .15);
-    transition: all 0.2s linear;
+.header-content-title {
+    font-size: 30px;
+    font-family: "Montserrat", sans-serif;
+    color: rgb(255, 255, 255);
+    font-weight: 700;
+    text-transform: uppercase;
+    line-height: 1.2;
+    margin: 0px 0px 12px;
+    padding: 0px;
 }
 
-.site-logo:focus {
-    background-color: rgb(254, 209, 54, .15);
+.header-content-description {
+    font-size: 18px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    color: rgb(255, 255, 255);
+    line-height: 1.2;
+    margin: 0px 0px 16px;
+    padding: 0px 50px;
+}
+
+.header-button {
+    font-size: 14px;
+    font-family: "Montserrat", sans-serif;
+    color: rgb(255, 255, 255);
+    font-weight: 700;
+    line-height: 1.2;
+    border: none;
+    border-radius: 20px;
+    background-color: rgb(255, 78, 80);
+    padding: 12px 50px;
+    cursor: pointer;
+}
+
+.header-button:hover,
+.header-button:focus {
+    box-shadow: 1px 1px 7px 1px rgb(255, 78, 80);
     transition: all 0.2s linear;
 }
 
 /* main */
 
-/* .main-content-wrapper {
+.main-content {
     display: flex;
 }
 
-.main-section {
-    width: 100%;
-}
-
 .section-title {
-    font-size: 40px;
-    font-family: 'Montserrat', sans-serif;
-    color: rgb(34, 34, 34);
+    font-size: 22px;
+    font-family: "Montserrat", sans-serif;
+    color: rgb(51, 51, 51);
     font-weight: bold;
-    text-transform: uppercase;
     line-height: 1.2;
-    text-align: center;
-    margin: 0px 0px 10px;
-}
-
-.description-section {
-    font-size: 16px;
-    font-family: "Droid Serif", serif;
-    color: rgb(119, 119, 119);
-    font-style: italic;
-    line-height: 1.2;
-    text-align: center;
-    margin: 0px 0px 76px 0px;
+    margin: 70px 0px 20px;
+    padding: 0px 26px;
 }
 
 .section-items {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
-    margin: 0px 0px 118px;
-    padding: 0px;
     list-style: none;
-    text-decoration: none;
+    margin: 0px auto;
+    padding: 0px 50px;
 }
 
 .section-item {
-    width: 290px;
-    padding: 96px 0px 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0px;
+
+}
+
+.section-item:not(:nth-last-of-type(-4n+1)) {
+    margin-bottom: 26px;
+}
+
+.item-img-wrapper{
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    min-width: 120px;
+    min-height: 120px;
+    margin-bottom: 20px;
     background-repeat: no-repeat;
-    background-position: 50% 0;
+    background-position: center;
 }
 
-.section-item::before {
-    display: block;
-    content: '';
+.item-partner-tv{
+    background-image: url(../img/partner-tv.png);
 }
 
-.icon-basket {
-    background-image: url(../img/circle-basket.png);
+.item-partner-chemistry{
+background-image: url(../img/partner-chemistry.png);
 }
 
-.icon-laptop {
-    background-image: url(../img/circle-laptop.png);
+.item-partner-cap{
+    background-image: url(../img/partner-cap.png);
 }
 
-.icon-locked {
-    background-image: url(../img/circle-locked.png);
+.item-partner-telegram{
+background-image: url(../img/partner-telegram.png);
 }
 
-.title-item {
-    font-size: 18px;
-    font-family: 'Montserrat', sans-serif;
-    color: rgb(34, 34, 34);
-    font-weight: 700;
-    line-height: 1.2;
-    text-align: center;
-    margin: 0px 0px 12px 0px;
-}
-
-.description {
+.section-item-title {
     font-size: 14px;
-    font-family: 'Roboto Slab', serif;
-    color: rgb(119, 119, 119);
-    font-weight: 400;
+    font-family: "Montserrat", sans-serif;
+    color: rgb(51, 51, 51);
+    font-weight: bold;
     line-height: 1.2;
-    text-align: center;
+    margin: 0px 0px 14px;
+}
+
+.section-item-description {
+    font-family: "Roboto", sans-serif;
     margin: 0px;
 }
 
 /* footer */
 
-/* .main-footer {
-    background-image: url(../img/background-map.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+.main-footer {
+    display: flex;
 }
 
 .main-footer-wrapper {
-    display: flex;
+    margin: 26px 0px 56px;
 }
 
-.profile-form {
-    width: 100%;
-}
-
-.profile-form-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 114px;
-}
-
-.footer-title {
-    font-size: 40px;
-    font-family: 'Montserrat', sans-serif;
-    color: rgb(255, 255, 255);
-    font-weight: bold;
-    text-transform: uppercase;
-    line-height: 1.2;
-    text-align: center;
-    margin: 106px 0px 16px;
-}
-
-.description-footer {
-    font-size: 16px;
-    font-family: "Droid Serif", serif;
-    color: rgb(119, 119, 119);
-    font-style: italic;
-    line-height: 1.2;
-    text-align: center;
-    margin: 0px 0px 74px 0px;
-}
-
-.fieldset-form {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    margin: 0px 0px 30px 0px;
-}
-
-.input-items {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    list-style: none;
-    margin: 0px;
-    padding: 0px;
-}
-
-.input-field {
-    min-width: 458px;
-    border: 1px solid rgb(204, 204, 204);
-    border-radius: 2px;
-    background-color: rgb(255, 255, 255);
-    font-size: 14px;
-    font-family: 'Montserrat', sans-serif;
+.footer-button {
+    font-family: "Montserrat", sans-serif;
+    color: rgb(255, 78, 80);
     font-weight: 700;
-    line-height: 1.2;
-    text-align: left;
-    margin: 0px;
-    padding: 18px 5px 18px 20px;
-}
-
-.input-area {
-    min-width: 458px;
-    min-height: 214px;
-    border: 1px solid rgb(204, 204, 204);
-    border-radius: 5px;
+    border: 2px solid rgb(255, 78, 80);
+    border-radius: 20px;
     background-color: rgb(255, 255, 255);
-    font-size: 14px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    line-height: 1.2;
-    text-align: left;
-    padding: 20px 5px 5px 20px;
-    resize: none;
+    padding: 10px 70px;
+    cursor: pointer;
 }
 
-input::-webkit-input-placeholder,
-textarea::-webkit-input-placeholder {
-    color: rgb(187, 187, 187);
-    font-family: 'Montserrat', sans-serif;
-    text-transform: uppercase;
+.footer-button:hover,
+.footer-button:focus {
+    box-shadow: 1px 1px 7px 1px rgb(255, 78, 80);
+    transition: all 0.2s linear;
 }
 
+
+
+
+
+
+/*
 .button {
     border: none;
     cursor: pointer;
