--- a/module-08/css/media.css
+++ b/module-08/css/media.css
@@ -1,3 +1,273 @@
+@media screen and (max-width: 767px) {
+  .section-item:not(:nth-last-of-type(-4n+1)) {
+    margin-bottom: 26px;
+  }
+
+
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+
+  .main-header {
+    display: flex;
+    background-image: url(../img/tablet-img.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .main-navigation {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .main-navigation-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    align-items: center;
+    margin: 38px 0px 148px;
+    padding: 0px 50px 0px 32px;
+
+  }
+
+  .site-logo {
+    margin: 0px;
+    /* cursor: pointer; */
+  }
+
+  .navigation-items {
+    /* display: flex;
+    flex-wrap: wrap; */
+    order: 1;
+    /* list-style: none; */
+    margin: 0px;
+    padding: 0px;
+  }
+
+  /* .item-link {
+    display: block;
+    text-decoration: none;
+    font-size: 14px;
+    font-family: "Montserrat", sans-serif;
+    color: rgb(255, 255, 255);
+    font-weight: 700;
+    line-height: 1.2;
+    border: 2px solid rgba(255, 255, 255, 0);
+    border-radius: 20px;
+    padding: 8px 16px;
+  }
+
+  .item-link:hover,
+  .item-link:focus {
+    border-color: rgba(255, 255, 255, 1);
+    transition: all 0.2s linear;
+  } */
+
+  .main-header-content {
+    margin: 0px 0px 234px;
+    padding: 0px 130px;
+  }
+
+  .header-content-title {
+    font-size: 52px;
+    /* font-family: "Montserrat", sans-serif;
+    color: rgb(255, 255, 255);
+    font-weight: 700;
+    text-transform: uppercase;
+    line-height: 1.2; */
+    margin: 0px 0px 32px;
+    padding: 0px;
+  }
+
+  .header-content-description {
+    font-size: 24px;
+    /* font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    color: rgb(255, 255, 255);
+    line-height: 1.2; */
+    margin: 0px 0px 16px;
+    padding: 0px;
+  }
+
+  .header-button {
+    /* font-size: 14px;
+    font-family: "Montserrat", sans-serif;
+    color: rgb(255, 255, 255);
+    font-weight: 700;
+    line-height: 1.2;
+    border: none;
+    border-radius: 20px;
+    background-color: rgb(255, 78, 80); */
+    padding: 12px 20px;
+    /* cursor: pointer; */
+  }
+
+  /* .header-button:hover,
+  .header-button:focus {
+    box-shadow: 1px 1px 7px 1px rgb(255, 78, 80);
+    transition: all 0.2s linear;
+  } */
+
+
+  /* main */
+
+  .main-content {
+    /* display: flex; */
+  }
+
+  .main-section {
+    /* display: flex; */
+  }
+
+  .section-title {
+    font-size: 22px;
+    /* font-family: "Montserrat", sans-serif;
+    color: rgb(51, 51, 51);
+    font-weight: bold;
+    line-height: 1.2; */
+    margin: 70px 0px 32px;
+    padding: 0px;
+  }
+
+  .section-items {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: start;
+    /* list-style: none; */
+    margin: 0px;
+    padding: 0px 138px;
+  }
+
+  .section-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 236px;
+    min-height: 236px;
+    margin: 0px;
+    padding: 0px 10px;
+  }
+
+  .section-item:not(:nth-last-of-type(-2n+3)) {
+    margin-bottom: 34px;
+  }
+
+  .section-item-chemistry {
+    order: 2;
+  }
+
+  .section-item-cap {
+    order: 1;
+  }
+
+  .section-item-telegram {
+    order: 3;
+  }
+
+  /* .item-img-wrapper {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    min-width: 120px;
+    min-height: 120px;
+    margin-bottom: 20px;
+    background-repeat: no-repeat;
+    background-position: center;
+  } */
+
+  /* .item-partner-tv {
+    background-image: url(../img/partner-tv.png);
+  }
+
+  .item-partner-chemistry {
+    background-image: url(../img/partner-chemistry.png);
+  }
+
+  .item-partner-cap {
+    background-image: url(../img/partner-cap.png);
+  }
+
+  .item-partner-telegram {
+    background-image: url(../img/partner-telegram.png);
+  }
+
+  .section-item-title {
+    font-size: 14px;
+    font-family: "Montserrat", sans-serif;
+    color: rgb(51, 51, 51);
+    font-weight: bold;
+    line-height: 1.2;
+    margin: 0px 0px 14px;
+  }
+
+  .section-item-description {
+    font-family: "Roboto", sans-serif;
+    margin: 0px;
+  } */
+
+
+/* footer */
+
+.main-footer {
+  display: flex;
+  /* justify-content: center; */
+}
+
+.main-footer-wrapper {
+  margin: 36px 0px 40px;
+}
+
+.footer-button {
+  /* font-family: "Montserrat", sans-serif;
+  color: rgb(255, 78, 80);
+  font-weight: 700;
+  border: 2px solid rgb(255, 78, 80);
+  border-radius: 20px;
+  background-color: rgb(255, 255, 255); */
+  padding: 10px 26px;
+  /* cursor: pointer; */
+}
+
+/* .footer-button:hover,
+.footer-button:focus {
+  box-shadow: 1px 1px 7px 1px rgb(255, 78, 80);
+  transition: all 0.2s linear;
+} */
+
+
+
+
+}
+
+
+
+
+
+@media screen and (min-width: 768px) and (max-width: 1439px) {}
+
+@media screen and (min-width: 1440px) {}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* @media (max-width: 599px) {
   .page-header {
     margin-bottom: 70px;
@@ -39,6 +309,16 @@
     margin-bottom: 40px;
   }
 }
+
+
+
+
+
+
+
+
+
+
 
 @media (min-width: 600px) {
   .container {
@@ -102,6 +382,27 @@
   }
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media (min-width: 600px) and (max-width: 1169px) {
   .site-logo {
     margin-bottom: 30px;
@@ -116,6 +417,24 @@
     margin-bottom: 40px;
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media (min-width: 1170px) {
   .container {
