--- a/module-08/css/style.css
+++ b/module-08/css/style.css
@@ -42,15 +42,13 @@ img {
     background-size: cover;
 }
 
-.main-header-wrapper {}
-
-.site-logo {
+/* .main-navigation {
     display: flex;
-    justify-content: center;
-    margin: 30px;
-}
+    flex-direction: column;
+    justify-content: space-between;
+} */
 
-.main-navigation {
+.main-navigation-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -61,7 +59,7 @@ img {
     flex-wrap: wrap;
     order: -1;
     list-style: none;
-    margin: 20px 0px 118px;
+    margin: 20px 0px 116px;
     padding: 0px 0px 0px 66px;
 }
 
@@ -86,6 +84,14 @@ img {
 .item-link:focus {
     border-color: rgba(255, 255, 255, 1);
     transition: all 0.2s linear;
+}
+
+.site-logo {
+    border: 2px solid rgba(255, 255, 255, 0);
+    border-radius: 20px;
+    padding: 6px 16px;
+    margin: 0px auto 22px;
+    cursor: pointer;
 }
 
 .main-header-content {
@@ -123,8 +129,14 @@ img {
     border: none;
     border-radius: 20px;
     background-color: rgb(255, 78, 80);
-    padding: 12px 50px;
+    padding: 12px 48px;
     cursor: pointer;
+}
+
+.site-logo:hover,
+.site-logo:focus {
+    border-color: rgba(255, 255, 255, 1);
+    transition: all 0.2s linear;
 }
 
 .header-button:hover,
@@ -166,11 +178,7 @@ img {
 
 }
 
-.section-item:not(:nth-last-of-type(-4n+1)) {
-    margin-bottom: 26px;
-}
-
-.item-img-wrapper{
+.item-img-wrapper {
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
@@ -181,20 +189,20 @@ img {
     background-position: center;
 }
 
-.item-partner-tv{
+.item-partner-tv {
     background-image: url(../img/partner-tv.png);
 }
 
-.item-partner-chemistry{
-background-image: url(../img/partner-chemistry.png);
+.item-partner-chemistry {
+    background-image: url(../img/partner-chemistry.png);
 }
 
-.item-partner-cap{
+.item-partner-cap {
     background-image: url(../img/partner-cap.png);
 }
 
-.item-partner-telegram{
-background-image: url(../img/partner-telegram.png);
+.item-partner-telegram {
+    background-image: url(../img/partner-telegram.png);
 }
 
 .section-item-title {
@@ -215,6 +223,7 @@ background-image: url(../img/partner-telegram.png);
 
 .main-footer {
     display: flex;
+    justify-content: center;
 }
 
 .main-footer-wrapper {
@@ -237,50 +246,6 @@ background-image: url(../img/partner-telegram.png);
     box-shadow: 1px 1px 7px 1px rgb(255, 78, 80);
     transition: all 0.2s linear;
 }
-
-
-
-
-
-
-/*
-.button {
-    border: none;
-    cursor: pointer;
-    border-radius: 3px;
-    background-color: rgb(254, 209, 54);
-    font-size: 18px;
-    font-family: 'Montserrat', sans-serif;
-    color: rgb(255, 255, 255);
-    font-weight: 700;
-    text-transform: uppercase;
-    line-height: 1.2;
-    text-align: center;
-    padding: 24px 46px;
-}
-
-.profile-form input[name='name']:valid,
-.profile-form input[type='email']:valid {
-    outline: 3px solid rgb(40, 187, 40);
-}
-
-.profile-form textarea:valid {
-    outline: 3px solid rgb(40, 187, 40);
-}
-
-.profile-form input[type='text']:invalid,
-.profile-form input[type='email']:invalid {
-    outline: 2px solid rgb(255, 0, 0);
-}
-
-.profile-form textarea:invalid {
-    outline: 2px solid rgb(255, 0, 0);
-}
-
-.button:hover,
-.button:focus {
-    box-shadow: 3px 2px 5px 3px rgba(255, 255, 0, .3);
-}*/
 
 .visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden,
