--- a/module-08/css/style.css
+++ b/module-08/css/style.css
@@ -29,10 +29,6 @@ img {
     text-align: center;
 }
 
-* {
-    outline: 1px solid red;
-}
-
 /* header */
 
 .main-header {
@@ -41,12 +37,6 @@ img {
     background-repeat: no-repeat;
     background-size: cover;
 }
-
-/* .main-navigation {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-} */
 
 .main-navigation-wrapper {
     display: flex;
@@ -87,9 +77,6 @@ img {
 }
 
 .site-logo {
-    border: 2px solid rgba(255, 255, 255, 0);
-    border-radius: 20px;
-    padding: 6px 16px;
     margin: 0px auto 22px;
     cursor: pointer;
 }
@@ -135,12 +122,11 @@ img {
 
 .site-logo:hover,
 .site-logo:focus {
-    border-color: rgba(255, 255, 255, 1);
+    box-shadow: 1px 1px 7px 1px rgb(255, 255, 255);
     transition: all 0.2s linear;
 }
 
-.header-button:hover,
-.header-button:focus {
+.header-button:hover,.header-button:focus {
     box-shadow: 1px 1px 7px 1px rgb(255, 78, 80);
     transition: all 0.2s linear;
 }
