--- a/module-08/css/media.css
+++ b/module-08/css/media.css
@@ -2,8 +2,6 @@
   .section-item:not(:nth-last-of-type(-4n+1)) {
     margin-bottom: 26px;
   }
-
-
 }
 
 @media screen and (min-width: 768px) {
@@ -12,61 +10,25 @@
   }
 
   .main-header {
-    display: flex;
     background-image: url(../img/tablet-img.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-
-  .main-navigation {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
   }
 
   .main-navigation-wrapper {
-    display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
     align-items: center;
     margin: 38px 0px 148px;
-    padding: 0px 50px 0px 32px;
-
+    padding: 0px 50px;
   }
 
   .site-logo {
     margin: 0px;
-    /* cursor: pointer; */
   }
 
   .navigation-items {
-    /* display: flex;
-    flex-wrap: wrap; */
     order: 1;
-    /* list-style: none; */
     margin: 0px;
     padding: 0px;
   }
-
-  /* .item-link {
-    display: block;
-    text-decoration: none;
-    font-size: 14px;
-    font-family: "Montserrat", sans-serif;
-    color: rgb(255, 255, 255);
-    font-weight: 700;
-    line-height: 1.2;
-    border: 2px solid rgba(255, 255, 255, 0);
-    border-radius: 20px;
-    padding: 8px 16px;
-  }
-
-  .item-link:hover,
-  .item-link:focus {
-    border-color: rgba(255, 255, 255, 1);
-    transition: all 0.2s linear;
-  } */
 
   .main-header-content {
     margin: 0px 0px 234px;
@@ -75,88 +37,41 @@
 
   .header-content-title {
     font-size: 52px;
-    /* font-family: "Montserrat", sans-serif;
-    color: rgb(255, 255, 255);
-    font-weight: 700;
-    text-transform: uppercase;
-    line-height: 1.2; */
     margin: 0px 0px 32px;
     padding: 0px;
   }
 
   .header-content-description {
     font-size: 24px;
-    /* font-family: "Roboto", sans-serif;
-    font-weight: 300;
-    color: rgb(255, 255, 255);
-    line-height: 1.2; */
     margin: 0px 0px 16px;
     padding: 0px;
   }
 
   .header-button {
-    /* font-size: 14px;
-    font-family: "Montserrat", sans-serif;
-    color: rgb(255, 255, 255);
-    font-weight: 700;
-    line-height: 1.2;
-    border: none;
-    border-radius: 20px;
-    background-color: rgb(255, 78, 80); */
     padding: 12px 20px;
-    /* cursor: pointer; */
   }
-
-  /* .header-button:hover,
-  .header-button:focus {
-    box-shadow: 1px 1px 7px 1px rgb(255, 78, 80);
-    transition: all 0.2s linear;
-  } */
-
 
   /* main */
 
-  .main-content {
-    /* display: flex; */
-  }
-
-  .main-section {
-    /* display: flex; */
-  }
-
   .section-title {
     font-size: 22px;
-    /* font-family: "Montserrat", sans-serif;
-    color: rgb(51, 51, 51);
-    font-weight: bold;
-    line-height: 1.2; */
     margin: 70px 0px 32px;
     padding: 0px;
   }
 
   .section-items {
-    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: start;
-    /* list-style: none; */
     margin: 0px;
     padding: 0px 138px;
   }
 
   .section-item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     max-width: 236px;
     min-height: 236px;
     margin: 0px;
     padding: 0px 10px;
-  }
-
-  .section-item:not(:nth-last-of-type(-2n+3)) {
-    margin-bottom: 34px;
   }
 
   .section-item-chemistry {
@@ -171,296 +86,83 @@
     order: 3;
   }
 
-  /* .item-img-wrapper {
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-    min-width: 120px;
-    min-height: 120px;
-    margin-bottom: 20px;
-    background-repeat: no-repeat;
-    background-position: center;
-  } */
+  /* footer */
 
-  /* .item-partner-tv {
-    background-image: url(../img/partner-tv.png);
+  .main-footer-wrapper {
+    margin: 36px 0px 40px;
   }
 
-  .item-partner-chemistry {
-    background-image: url(../img/partner-chemistry.png);
-  }
-
-  .item-partner-cap {
-    background-image: url(../img/partner-cap.png);
-  }
-
-  .item-partner-telegram {
-    background-image: url(../img/partner-telegram.png);
-  }
-
-  .section-item-title {
-    font-size: 14px;
-    font-family: "Montserrat", sans-serif;
-    color: rgb(51, 51, 51);
-    font-weight: bold;
-    line-height: 1.2;
-    margin: 0px 0px 14px;
-  }
-
-  .section-item-description {
-    font-family: "Roboto", sans-serif;
-    margin: 0px;
-  } */
-
-
-/* footer */
-
-.main-footer {
-  display: flex;
-  /* justify-content: center; */
-}
-
-.main-footer-wrapper {
-  margin: 36px 0px 40px;
-}
-
-.footer-button {
-  /* font-family: "Montserrat", sans-serif;
-  color: rgb(255, 78, 80);
-  font-weight: 700;
-  border: 2px solid rgb(255, 78, 80);
-  border-radius: 20px;
-  background-color: rgb(255, 255, 255); */
-  padding: 10px 26px;
-  /* cursor: pointer; */
-}
-
-/* .footer-button:hover,
-.footer-button:focus {
-  box-shadow: 1px 1px 7px 1px rgb(255, 78, 80);
-  transition: all 0.2s linear;
-} */
-
-
-
-
-}
-
-
-
-
-
-@media screen and (min-width: 768px) and (max-width: 1439px) {}
-
-@media screen and (min-width: 1440px) {}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* @media (max-width: 599px) {
-  .page-header {
-    margin-bottom: 70px;
-  }
-
-  .page-nav {
-    padding: 20px 0;
-  }
-
-  .site-logo {
-    margin-bottom: 20px;
-  }
-
-  .site-logo img {
-    margin: 0 auto;
-  }
-
-  .site-navigation a {
-    padding: 5px 0;
-    font-size: 24px;
-    line-height: 1;
-    text-align: center;
-  }
-
-  .banner {
-    display: none;
-  }
-
-  .features-list-item:not(:last-child) {
-    margin-bottom: 40px;
-  }
-
-  .team-list-item {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .team-list-item:not(:last-child) {
-    margin-bottom: 40px;
+  .footer-button {
+    padding: 10px 26px;
   }
 }
 
+@media screen and (min-width: 768px) and (max-width: 940px) {
+  .section-item:not(:nth-last-of-type(-2n+3)) {
+    margin-bottom: 34px;
+  }
+}
 
-
-
-
-
-
-
-
-
-
-@media (min-width: 600px) {
+@media screen and (min-width: 940px) {
   .container {
-    width: 600px;
+    width: 940px;
   }
 
-  .page-nav {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  .main-header {
+    background-image: url(../img/desktop-img.png);
   }
 
-  .site-navigation {
-    display: flex;
-    justify-content: space-between;
+  .main-navigation-wrapper {
+    padding: 0px;
   }
 
-  .banner {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 200px;
-    margin-bottom: 120px;
-
-    background-image: linear-gradient(
-        to right,
-        rgba(239, 59, 54, 0.3),
-        rgba(255, 255, 255, 0.3)
-      ),
-      linear-gradient(to top, rgba(0, 210, 255, 0.3), rgba(145, 140, 170, 0.3)),
-      url('../img/banner.jpeg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+  .main-header-content {
+    padding: 0px 218px;
   }
 
-  .slider {
-    height: 150px;
-    background-color: #fff;
+  .header-content-title {
+    margin: 0px 0px 26px;
   }
 
-  .features-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+  .header-content-description {
+    margin: 0px 0px 32px;
   }
 
-  .features-list-item {
-    flex: 0 0 270px;
+  /* main */
+
+  .section-items {
+    align-items: start;
+    padding: 0px;
   }
 
-  .team-list {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+  .section-item {
+    max-width: 220px;
+    padding: 0px;
   }
 
-  .team-list-item {
-    flex: 0 0 270px;
-  }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (min-width: 600px) and (max-width: 1169px) {
-  .site-logo {
-    margin-bottom: 30px;
+  .section-item:not(:nth-last-child(-n+4)) {
+    margin-bottom: 36px;
   }
 
-  .site-navigation {
-    width: 100%;
+  .section-item-chemistry {
+    order: 2;
   }
 
-  .features-list-item:not(:nth-last-child(-n + 2)),
-  .team-list-item:not(:nth-last-child(-n + 2)) {
-    margin-bottom: 40px;
+  .section-item-cap {
+    order: 1;
+  }
+
+  .section-item-telegram {
+    order: 3;
+  }
+
+  /* footer */
+
+  .main-footer-wrapper {
+    margin: 36px 0px 72px;
+  }
+
+  .footer-button {
+    padding: 10px 26px;
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (min-width: 1170px) {
-  .container {
-    width: 1170px;
-  }
-
-  .page-nav {
-    flex-direction: row;
-    justify-content: space-between;
-  }
-
-  .site-navigation {
-    flex: 0 0 600px;
-  }
-
-  .banner {
-    min-height: 400px;
-  }
-
-  .features-list-item {
-    flex: 0 0 370px;
-    margin-bottom: 72px;
-    padding: 0 38px;
-  }
-
-  .features-list-item:nth-last-child(-n + 3) {
-    margin-bottom: 0;
-  }
-} */
