--- a/module-09/css/media.css
+++ b/module-09/css/media.css
@@ -1,179 +1,101 @@
+@media screen and (min-width: 480px) {
+  .container-fluid {
+    background-image: linear-gradient(180deg, hsla(0, 0%, 0%, 0.1), hsla(0, 0%, 0%, 0.2)),
+      url(../img/tablet-img.png);
+  }
+}
+
+@media screen and (min-width: 748px) {
+  .container-fluid {
+    min-height: 700px;
+  }
+}
+
 @media (max-width: 767px) {
-  .section-items [class*="col-"]:not(:last-child) {
+  .carts [class*="col-"]:not(:last-child) {
     margin-bottom: 26px;
   }
 }
 
-@media (min-width: 768px) and (max-width: 941px) {
-  .container {
-    min-width: 768px;
-  }
-
-  .wrapper {
-    background-image: url(../img/tablet-img.png);
-  }
-
-  .main-navigation-wrapper {
-    margin: 0px;
+@media (min-width: 768px) {
+  .navigation-items {
     padding: 38px 0px 148px;
   }
 
-  .navigation-items {
-    margin: 0px;
-    padding: 0px;
-  }
-
-  .site-logo {
-    margin: 0px;
-    padding-left: 28px;
-  }
-
-  .mg-a {
-    margin: 0px;
+  .typographic-md-title {
+    font-size: 52px;
+    margin: 0px 0px 32px !important;
   }
 
   .main-header-content {
-    margin: 0px 0px 234px;
-    padding: 0px 130px;
+    padding: 0px 100px;
   }
 
-  .header-content-title {
-    font-size: 52px;
-    margin: 0px 0px 32px;
-  }
-
-  .header-content-description {
+  .typographic-md-description {
     font-size: 24px;
-    margin: 0px 0px 16px;
   }
 
   .header-button {
     padding: 12px 20px;
   }
 
-  /* main */
-
   .main-section-wrapper {
-    padding: 70px 0px 36px;
+    padding-bottom: 36px;
   }
 
   .section-title {
-    font-size: 22px;
-    margin: 0px 0px 32px;
-    padding: 0px;
+    margin-bottom: 32px !important;
   }
 
-  .section-items {
+  .carts {
+    justify-content: space-between;
     margin: 0px;
-    padding: 0px 138px;
+    padding: 0px 110px;
   }
 
-  .section-item {
-    min-width: 236px;
-    min-height: 236px;
-    margin: 0px;
-    padding: 0px 8px;
-  }
-
-  .section-items [class*="col-"]:nth-child(-2n+3) {
-    margin-bottom: 34px;
-  }
-
-  .section-items [class*="col-"]:nth-child(-n+4) {
+  .cart {
     max-width: 236px;
+    min-height: 236px;
   }
 
-  /* footer */
+  .carts [class*="col-"]:nth-child(-2n+3) {
+    margin-bottom: 20px;
+  }
 
   .main-footer-wrapper {
     margin: 0px 0px 40px;
   }
-
-  .footer-button {
-    padding: 10px 26px;
-  }
 }
 
-@media (min-width: 942px) {
-  .section-items [class*="col-"]:nth-child(-4n) {
-    margin-bottom: 36px;
-  }
-
-  .container {
-    min-width: 942px;
-  }
-
-  .wrapper {
-    background-image: url(../img/desktop-img.png);
-  }
-
-  .main-navigation-wrapper {
-    margin: 0px;
-    padding: 38px 0px 148px;
-  }
-
-  .navigation-items {
-    margin: 0px;
-    padding: 0px;
-  }
-
-  .img-logo {
-    margin: 0px;
+@media (min-width: 940px) {
+  .container-fluid {
+    min-height: 700px;
+    background-image: linear-gradient(180deg, hsla(0, 0%, 0%, 0.1), hsla(0, 0%, 0%, 0.2)),
+      url(../img/desktop-img.png);
   }
 
   .main-header-content {
-    padding: 0px 218px;
-    margin: 0px 0px 234px;
+    padding: 0px 198px;
   }
 
-  .header-content-title {
-    font-size: 52px;
-    margin: 0px 0px 32px;
-  }
-
-  .header-content-description {
-    font-size: 24px;
-    margin: 0px 0px 32px;
+  .typographic-md-description {
+    margin: 0px 0px 32px !important;
   }
 
   .header-button {
-    padding: 12px 20px;
+    padding: 12px 24px !important;
   }
 
-  /* main */
-
-  .main-section-wrapper {
-    padding: 70px 0px 36px;
-  }
-
-  .section-title {
-    font-size: 22px;
-    margin: 0px 0px 32px;
-  }
-
-  .section-items {
-    display: flex;
-    /* flex-direction: row; */
-    flex-wrap: wrap;
-    align-items: stretch;
-    /* justify-content: space-between; */
-    margin: 0px;
-    padding: 0px;
-  }
-
-  .section-item {
+  .cart {
     max-width: 220px;
     min-height: 236px;
-    margin: 0px;
   }
-
-  /* footer */
 
   .main-footer-wrapper {
     margin: 0px 0px 72px;
   }
 
   .footer-button {
-    padding: 10px 26px;
+    padding: 10px 26px !important;
   }
 }
